fix: bug font size collapse

--- a/src/styles/Collapse.sass
+++ b/src/styles/Collapse.sass
@@ -22,6 +22,8 @@
         padding: 10px 20px 8px 15px
         background-color: shared.$red-color
         border-radius: 5px
+        &--small
+            font-size: 18px
         @media screen and (max-width: 768px)
             font-size: 13px
     &__arrow
